fix: directly expose rpc url (for keeper)

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - sprint/*
       - release/*
+      - 0xpolarzero/pri-1085-playtest-deployment
   workflow_dispatch:
 
 jobs:
