--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build Docker image
-        run: docker build -t keeper:latest -f ./apps/keeper/Dockerfile .
+        run: docker build --no-cache -t keeper:latest -f ./apps/keeper/Dockerfile .
 
       - name: Save Docker image
         run: docker save keeper:latest > image.tar
