wip: cleanup docker resources

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build Docker image
-        run: docker build --no-cache -t keeper:latest -f ./apps/keeper/Dockerfile .
+        run: docker build -t keeper:latest -f ./apps/keeper/Dockerfile .
 
       - name: Save Docker image
         run: docker save keeper:latest > image.tar
@@ -36,6 +36,9 @@ jobs:
       - name: Load and run Docker image on EC2
         run: |
           ssh -o StrictHostKeyChecking=no -i private_key ${EC2_USER}@${EC2_HOST} '
+            # Clean up Docker resources
+            sudo docker system prune -af --volumes
+
             sudo docker load < image.tar
 
             # Stop and remove any existing container
@@ -50,6 +53,12 @@ jobs:
               -e KEEPER_PRIVATE_KEY="'$KEEPER_PRIVATE_KEY'" \
               -e KEEPER_BEARER_TOKEN="'$KEEPER_BEARER_TOKEN'" \
               keeper:latest
+
+            # Remove the transferred image file
+            rm ~/image.tar
+            
+            # Keep only the latest image
+            sudo docker image prune -af
           '
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
