--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -37,6 +37,6 @@ eth_rpc_url = "https://rpc.holesky.redstone.xyz"
 chain_id = 17001
 
 [invariant]
-runs = 1
-depth = 32
-fail_on_revert = true
+runs = 16
+depth = 256
+fail_on_revert = false
