--- a/apps/payman/foundry.toml
+++ b/apps/payman/foundry.toml
@@ -1,6 +1,9 @@
 [profile.default]
+ffi = true
+
 src = "src"
 out = "out"
 libs = ["lib"]
+fs_permissions = [{ access = "write", path = "../../packages/contracts/" }]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
