--- a/apps/payman/package.json
+++ b/apps/payman/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "main": "index.ts",
   "scripts": {},
-  "dependencies": {},
+  "dependencies": {
+    "dotenv": "^16.4.5"
+  },
   "devDependencies": {
     "ds-test": "https://github.com/dapphub/ds-test.git#e282159d5170298eb2455a6c05280ab5a73a4ef0",
     "forge-std": "https://github.com/foundry-rs/forge-std.git#74cfb77e308dd188d2f58864aaf44963ae6b88b1"
