feat: do not redeploy payman if already exists on this chain

--- a/apps/payman/foundry.toml
+++ b/apps/payman/foundry.toml
@@ -4,6 +4,6 @@ ffi = true
 src = "src"
 out = "out"
 libs = ["lib"]
-fs_permissions = [{ access = "write", path = "../../packages/contracts/" }]
+fs_permissions = [{ access = "read-write", path = "../../packages/contracts/" }]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
