feat: sequenced deployment from a single command

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -13,11 +13,13 @@
     "build:prototype": "tsx ./ts/prototypes/commands/prototypegen.ts",
     "build:map": "tsx ./ts/map/commands/mapgen.ts",
     "clean:contracts": "rm -rf ./node_modules && rm -rf ./src/codegen",
-    "deploy:base-sepolia": "pnpm mud deploy --profile=base-sepolia",
+    "deploy:base-sepolia": "pnpm deploy:payman-base-sepolia && pnpm mud deploy --profile=base-sepolia",
     "deploy:caldera": "pnpm mud deploy --profile=caldera",
     "deploy:caldera-sepolia": "pnpm mud deploy --profile=caldera-sepolia",
-    "deploy:local": "pnpm mud deploy --skipBuild",
+    "deploy:local": "pnpm deploy:payman-local && pnpm mud deploy --skipBuild",
     "deploy:redstone-holesky": "pnpm mud deploy --profile=redstone-holesky",
+    "deploy:payman-local": "forge script ../../apps/payman/script/DeployPayoutManager.s.sol --root ../../apps/payman — RPC-url http://127.0.0.1:8545 — broadcast — verify",
+    "deploy:payman-base-sepolia": "forge script ../../apps/payman/script/DeployPayoutManager.s.sol --root ../../apps/payman — RPC-url $SEPOLIA_BASE_RPC_URL — broadcast — verify",
     "dev": "pnpm mud dev-contracts",
     "devnode": "mud devnode",
     "lint": "pnpm run prettier && pnpm run solhint",
