--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,6 +38,7 @@
     "lightweight-charts": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
     "react-scroll-to-bottom": "^4.2.0",
     "react-toastify": "^10.0.5",
     "react-virtualized-auto-sizer": "^1.0.24",
