--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -31,8 +31,8 @@ eth_rpc_url = "https://primodium-sepolia.rpc.caldera.xyz/http"
 chain_id = 10017
 
 [profile.base-sepolia]
-# eth_rpc_url = "https://base-sepolia.g.alchemy.com/v2/r7XIy5ha8oVNDTsTaYoZ7VVZ-hcbNRam"
-eth_rpc_url = "https://sepolia.base.org"
+eth_rpc_url = "https://base-sepolia.g.alchemy.com/v2/dndQwsapq393_Ws-KBNM0nUCvUoWD2iC"
+# eth_rpc_url = "https://sepolia.base.org"
 chain_id = 84532
 
 [profile.redstone-holesky]
