fix: try rewrites instead of routes

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,16 +1,8 @@
 {
-    "routes": [
+    "rewrites": [
         {
-            "src": "/",
-            "dest": "/"
-        },
-        {
-            "src": "/game",
-            "dest": "/"
-        },
-        {
-            "src": "/payman",
-            "dest": "/payman"
+            "source": "/(.*)",
+            "destination": "/"
         }
     ]
 }
