--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -27,7 +27,9 @@
     "solhint": "solhint --config ./.solhint.json 'src/**/*.sol' --fix",
     "test": "forge build && mud test --skipBuild --forgeOptions='--nmt invariant_'",
     "test:invariants": "forge build && mud test --skipBuild --forgeOptions='--mt invariant_'",
-    "changeGameConfig": "forge script script/ChangeGameConfig.s.sol — RPC-url $SEPOLIA_BASE_RPC_URL --broadcast --slow"
+    "changeGameConfigAnvil": "forge script script/ChangeGameConfig.s.sol — RPC-url http://127.0.0.1:8545 --broadcast --slow",
+    "changeGameConfigBaseSepolia": "forge script script/ChangeGameConfig.s.sol — RPC-url $SEPOLIA_BASE_RPC_URL --broadcast --slow",
+    "changeGameConfigBase": "forge script script/ChangeGameConfig.s.sol — RPC-url $BASE_RPC_URL --broadcast --slow"
   },
   "dependencies": {
     "@latticexyz/cli": "2.0.9",
