--- a/apps/keeper/package.json
+++ b/apps/keeper/package.json
@@ -39,6 +39,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
     "@types/debug": "^4.1.7",
     "prettier": "^3.3.3",
+    "prettier-plugin-jsdoc": "^1.3.2",
     "tsx": "^3.12.6",
     "vitest": "0.31.4"
   },
