--- a/apps/web/.prettierrc
+++ b/apps/web/.prettierrc
@@ -1,5 +1,5 @@
 {
-  "tabWidth": 2,
+ "tabWidth": 2,
   "proseWrap": "preserve",
   "printWidth": 120,
   "bracketSpacing": true,
@@ -10,6 +10,14 @@
   "useTabs": false,
   "quoteProps": "as-needed",
   "requirePragma": false,
+
+  "importOrderBuiltinModulesToTop": true,
+  "importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"],
+  "importOrderSeparation": false,
+  "importOrderSortSpecifiers": true,
+  "importOrderMergeDuplicateImports": true,
+  "importOrderCombineTypeAndValueImports": true,
+  "plugins": ["@ianvs/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss", "prettier-plugin-jsdoc"],
   "importOrder": [
     "^(react/(.*)$)|^(react$)",
     "<THIRD_PARTY_MODULES>",
@@ -18,12 +26,5 @@
     "^@/(.*)$",
     "",
     "^[./]"
-  ],
-  "importOrderSeparation": false,
-  "importOrderSortSpecifiers": true,
-  "importOrderBuiltinModulesToTop": true,
-  "importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"],
-  "importOrderMergeDuplicateImports": true,
-  "importOrderCombineTypeAndValueImports": true,
-  "plugins": ["@ianvs/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"]
+  ]
 }
