--- a/packages/assets/package.json
+++ b/packages/assets/package.json
@@ -31,6 +31,7 @@
     "glob": "^8.0.3",
     "optimist": "^0.6.1",
     "prettier": "^3.3.3",
+    "prettier-plugin-jsdoc": "^1.3.2",
     "ts-node": "^10.8.2",
     "typescript": "^5.5.3",
     "vite": "^3.2.3",
