--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,6 +45,7 @@
     "happy-dom": "^14.12.0",
     "jsdom": "^24.1.0",
     "prettier": "^3.3.3",
+    "prettier-plugin-jsdoc": "^1.3.2",
     "tsup": "^8.1.0",
     "typescript": "5.5.2",
     "vitest": "^0.32.4"
