--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -9,7 +9,10 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^18.19.3",
+    "prettier": "^3.3.3",
+    "prettier-plugin-jsdoc": "^1.3.2",
     "simple-zustand-devtools": "^1.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
