--- a/packages/game/package.json
+++ b/packages/game/package.json
@@ -28,6 +28,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
     "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.3",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "prettier-plugin-jsdoc": "^1.3.2"
   }
 }
