refactor: big batch of docs, cleanup, readme

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,42 @@
-# chains are "dev", "baseSepolia", "base"
+# -------------------------------- ENVIRONMENT ------------------------------- #
+# The identifier of the chain the client is running on
+# e.g. "dev" for the anvil node, or any chain the game is deployed on, with some config specified in `packages/core/src/network/config/chainConfigs.ts`
+PRI_CHAIN_ID="dev"
 
+# This will grant access to the Game Tools browser (for the editor and cheat codes) and Mud Dev Tools
+PRI_DEV="true"
+
+# The private key of the wallet for deploying contracts on the local anvil development chain
+PRI_DEV_PKEY=
+
+# ---------------------------------- KEEPER ---------------------------------- #
+# The private key that calls update functions from the keeper
+KEEPER_PRIVATE_KEY=
+# An optional bearer token to gatekeep access to keeper status updates (start, stop)
+KEEPER_BEARER_TOKEN=
+# The host for the keeper service
+KEEPER_HOST=0.0.0.0
+# The port for the keeper service
+KEEPER_PORT=3002
+
+# --------------------------------- CONTRACTS -------------------------------- #
+# The private key of the wallet for deploying contracts
+PRIVATE_KEY=
+# The address of the keeper manager (wallet that updates the world)
+KEEPER_ADDRESS=
+# The address of the rake recipient (if enabled)
+RAKE_RECIPIENT_ADDRESS=
+# The block number at which the game should start
 GAME_START_BLOCK=
 
-PRI_CHAIN_ID=
-PRI_DEV=
-PRIVATE_KEY=
+# --------------------------------- PROVIDERS -------------------------------- #
+# The URL of the Vercel serverless function for linking an account address to an ENS name.
+PRI_ACCOUNT_LINK_VERCEL_URL=
 
-PRI_DEV_PKEY=
-RAKE_RECIPIENT_ADDRESS=
+# The Ampli API key for the development environment
+PRI_AMPLI_API_KEY_DEV=
+# The Ampli API key for the production environment
+PRI_AMPLI_API_KEY_PROD=
+
+# The Privy project ID for authentication in the web app
 PRI_PRIVY_PROJECT_ID=
-
-KEEPER_PRIVATE_KEY=
-KEEPER_ADDRESS=
-KEEPER_BEARER_TOKEN=
