--- a/package.json
+++ b/package.json
@@ -1,26 +1,55 @@
 {
   "name": "primodium-empires",
   "version": "0.1.10",
-  "description": "",
-  "scripts": {
-    "dev": "turbo dev dev:indexer dev:keeper --continue",
-    "build": "turbo build",
-    "clean": "rm -rf ./node_modules && rm -rf ./packages/assets/node_modules && rm -rf ./packages/contracts/node_modules && rm -rf ./packages/contracts/src/codegen && rm -rf ./packages/core/node_modules && rm -rf ./packages/engine/node_modules && rm -rf ./packages/game/node_modules",
-    "clean:indexer": "pnpm clean-local-docker-indexer",
-    "dev:indexer": "pnpm clean-local-docker-indexer && pnpm local-docker-indexer",
-    "dev:keeper": "cd apps/keeper && pnpm start",
-    "build:contracts": "turbo --filter @primodiumxyz/contracts build",
-    "build:webapp": "turbo --filter @primodiumxyz/webapp build"
+  "description": "A fully onchain, turn-based, prediction market game.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/primodiumxyz/primodium-empires"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
+  "scripts": {
+    "build": "turbo build",
+    "build:contracts": "turbo --filter @primodiumxyz/contracts build",
+    "changeGameConfig:base": "turbo --filter @primodiumxyz/contracts changeGameConfig:base",
+    "changeGameConfig:base-sepolia": "turbo --filter @primodiumxyz/contracts changeGameConfig:base-sepolia",
+    "changeGameConfig:local": "turbo --filter @primodiumxyz/contracts changeGameConfig:local",
+    "clean:indexer": "pnpm clean-local-docker-indexer",
+    "deploy:base": "turbo --filter @primodiumxyz/contracts deploy:base",
+    "deploy:base-sepolia": "turbo --filter @primodiumxyz/contracts deploy:base-sepolia",
+    "deploy:caldera": "turbo --filter @primodiumxyz/contracts deploy:caldera",
+    "deploy:caldera-sepolia": "turbo --filter @primodiumxyz/contracts deploy:caldera-sepolia",
+    "deploy:local": "turbo --filter @primodiumxyz/contracts deploy:local",
+    "deploy:payman:base-sepolia": "turbo --filter @primodiumxyz/contracts deploy:payman-base-sepolia",
+    "deploy:payman:local": "turbo --filter @primodiumxyz/contracts deploy:payman-local",
+    "dev": "turbo dev dev:indexer dev:keeper  --continue",
+    "dev:contracts": "turbo dev:node deploy:local --continue",
+    "dev:indexer": "pnpm clean-local-docker-indexer && pnpm local-docker-indexer",
+    "dev:keeper": "turbo --filter @primodiumxyz/keeper dev",
+    "dev:node": "turbo --filter @primodiumxyz/contracts devnode",
+    "dev:web": "turbo --filter @primodiumxyz/webapp dev",
+    "export:assets": "turbo --filter @primodiumxyz/assets export",
+    "export:audio": "turbo --filter @primodiumxyz/assets export-audio",
+    "export:sprites": "turbo --filter @primodiumxyz/assets export-sprites",
+    "foundry:up": "curl -L https://foundry.paradigm.xyz | bash && bash $HOME/.foundry/bin/foundryup",
+    "mud:up": "pnpm mud set-version --tag main && pnpm install",
+    "prepare": "husky install && (forge --version || pnpm foundry:up)",
+    "sort-package-json": "npx sort-package-json package.json 'apps/*/package.json packages/*/package.json'",
+    "test": "pnpm recursive run test",
+    "upgrade:mud": "pnpm mud set-version --tag=next"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "eslint --cache --fix",
+    "*.{ts,tsx,css,md,mdx,sol}": "prettier --write",
+    "package.json": "pnpm sort-package-json"
+  },
   "devDependencies": {
     "@primodiumxyz/pg-indexer-reader": "^0.6.14",
+    "eslint": "8.29.0",
+    "husky": ">=6",
+    "lint-staged": ">=10",
     "turbo": "^2.0.4",
     "typescript": "^5.5.2"
   },
-  "packageManager": "pnpm@8.15.8",
   "engines": {
     "node": "18.x",
     "pnpm": "8.x"
