--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,7 +1,12 @@
 {
   "name": "@primodiumxyz/contracts",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "Empires contracts using MUD.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/primodiumxyz/primodium-empires",
+    "directory": "packages/contracts"
+  },
   "license": "MIT",
   "type": "module",
   "main": "index.ts",
@@ -12,7 +17,7 @@
     "build:mud": "pnpm run build:prototype && pnpm run build:map && pnpm mud build",
     "build:prototype": "tsx ./ts/prototypes/commands/prototypegen.ts",
     "build:map": "tsx ./ts/map/commands/mapgen.ts",
-    "clean:contracts": "rm -rf ./node_modules && rm -rf ./src/codegen",
+    "clean": "rm -rf ./node_modules && rm -rf ./src/codegen",
     "deploy:base": "pnpm mud deploy --profile=base",
     "deploy:base-sepolia": "pnpm mud deploy --profile=base-sepolia",
     "deploy:caldera": "pnpm mud deploy --profile=caldera",
@@ -28,7 +33,7 @@
     "solhint": "solhint --config ./.solhint.json 'src/**/*.sol' --fix",
     "test": "forge build && mud test --skipBuild --forgeOptions='--nmt invariant_'",
     "test:invariants": "forge build && mud test --skipBuild --forgeOptions='--mt invariant_'",
-    "changeGameConfig:anvil": "forge script script/ChangeGameConfig.s.sol --rpc-url http://127.0.0.1:8545 --chain-id 31337 --broadcast --slow",
+    "changeGameConfig:local": "forge script script/ChangeGameConfig.s.sol --rpc-url http://127.0.0.1:8545 --chain-id 31337 --broadcast --slow",
     "changeGameConfig:base-sepolia": "forge script script/ChangeGameConfig.s.sol --rpc-url https://base-sepolia.g.alchemy.com/v2/kXmXpqsmAXqJpHyIH7YYcmK5tHaakTNx --chain-id 84532 --broadcast --slow -vv",
     "changeGameConfig:base": "forge script script/ChangeGameConfig.s.sol --rpc-url https://base-mainnet.g.alchemy.com/v2/kXmXpqsmAXqJpHyIH7YYcmK5tHaakTNx --chain-id 8453 --broadcast"
   },
