--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
   "scripts": {
     "build": "turbo build",
     "build:contracts": "turbo --filter @primodiumxyz/contracts build",
-    "changeGameConfig:base": "turbo --filter @primodiumxyz/contracts changeGameConfig:base",
-    "changeGameConfig:base-sepolia": "turbo --filter @primodiumxyz/contracts changeGameConfig:base-sepolia",
-    "changeGameConfig:local": "turbo --filter @primodiumxyz/contracts changeGameConfig:local",
+    "changeGameConfig:base": "pnpm --filter @primodiumxyz/contracts changeGameConfig:base",
+    "changeGameConfig:base-sepolia": "pnpm --filter @primodiumxyz/contracts changeGameConfig:base-sepolia",
+    "changeGameConfig:local": "pnpm --filter @primodiumxyz/contracts changeGameConfig:local",
     "clean:indexer": "pnpm clean-local-docker-indexer",
-    "deploy:base": "turbo --filter @primodiumxyz/contracts deploy:base",
-    "deploy:base-sepolia": "turbo --filter @primodiumxyz/contracts deploy:base-sepolia",
-    "deploy:caldera": "turbo --filter @primodiumxyz/contracts deploy:caldera",
-    "deploy:caldera-sepolia": "turbo --filter @primodiumxyz/contracts deploy:caldera-sepolia",
-    "deploy:local": "turbo --filter @primodiumxyz/contracts deploy:local",
-    "deploy:payman:base-sepolia": "turbo --filter @primodiumxyz/contracts deploy:payman-base-sepolia",
-    "deploy:payman:local": "turbo --filter @primodiumxyz/contracts deploy:payman-local",
-    "dev": "turbo dev:node dev:indexer dev:keeper dev:web",
+    "deploy:base": "pnpm --filter @primodiumxyz/contracts deploy:base",
+    "deploy:base-sepolia": "pnpm --filter @primodiumxyz/contracts deploy:base-sepolia",
+    "deploy:caldera": "pnpm --filter @primodiumxyz/contracts deploy:caldera",
+    "deploy:caldera-sepolia": "pnpm --filter @primodiumxyz/contracts deploy:caldera-sepolia",
+    "deploy:local": "pnpm --filter @primodiumxyz/contracts deploy:local",
+    "deploy:payman:base-sepolia": "pnpm --filter @primodiumxyz/contracts deploy:payman-base-sepolia",
+    "deploy:payman:local": "pnpm --filter @primodiumxyz/contracts deploy:payman-local",
+    "dev": "turbo dev:node dev:keeper dev:web",
     "dev:indexer": "pnpm clean-local-docker-indexer && pnpm local-docker-indexer",
     "dev:keeper": "pnpm --filter @primodiumxyz/keeper start",
     "dev:node": "pnpm --filter @primodiumxyz/contracts devnode",
