--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "deploy:local": "pnpm --filter @primodiumxyz/contracts deploy:local",
     "deploy:payman:base-sepolia": "pnpm --filter @primodiumxyz/contracts deploy:payman-base-sepolia",
     "deploy:payman:local": "pnpm --filter @primodiumxyz/contracts deploy:payman-local",
-    "dev": "turbo dev:node dev:keeper dev:web",
+    "dev": "turbo dev:node dev:indexer dev:keeper dev:web",
     "dev:indexer": "pnpm clean-local-docker-indexer && pnpm local-docker-indexer",
     "dev:keeper": "pnpm --filter @primodiumxyz/keeper start",
     "dev:node": "pnpm --filter @primodiumxyz/contracts devnode",
