fix: skip prepare in workflow

--- a/apps/keeper/Dockerfile
+++ b/apps/keeper/Dockerfile
@@ -5,8 +5,6 @@ ENV PATH="$PNPM_HOME:$PATH"
 # https://github.com/pnpm/pnpm/issues/9029#issuecomment-2629817478
 RUN npm install -g corepack@latest
 RUN corepack enable
-# Make sure curl is available
-RUN apt-get update && apt-get install -y curl
 WORKDIR /app
 
 # Copy root package.json, pnpm-workspace.yaml, and pnpm-lock.yaml
@@ -21,7 +19,7 @@ COPY apps/keeper ./apps/keeper
 COPY packages ./packages
 
 # Install dependencies
-RUN pnpm install --frozen-lockfile
+RUN NODE_ENV=production pnpm install --frozen-lockfile
 
 # Set working directory to the keeper app
 WORKDIR /app/apps/keeper
