--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "export:sprites": "pnpm --filter @primodiumxyz/assets export-sprites",
     "foundry:up": "curl -L https://foundry.paradigm.xyz | bash && bash $HOME/.foundry/bin/foundryup",
     "mud:up": "pnpm mud set-version --tag main && pnpm install",
-    "prepare": "husky install && (forge --version || pnpm foundry:up)",
+    "prepare": "sh -c '[ \"$NODE_ENV\" = production ] || (husky install && (forge --version || pnpm foundry:up))'",
     "sort-package-json": "npx sort-package-json package.json 'apps/*/package.json packages/*/package.json'",
     "test": "pnpm recursive run test",
     "upgrade:mud": "pnpm mud set-version --tag=next"
