--- a/.github/workflows/keeper-docker.yml
+++ b/.github/workflows/keeper-docker.yml
@@ -10,7 +10,7 @@ on:
 env:
   REGISTRY: ghcr.io
   ORG: primodiumxyz
-  IMAGE_NAME: empires-keeper
+  IMAGE_NAME: empires-keeper-service
 
 # There is a single job in this workflow. It's configured to run on the latest available version of Ubuntu.
 jobs:
